feat: legge person i sakstittel
POFIM-20